syntax = "proto3";

package com.jasper.grpc;

option java_multiple_files = true;
option java_package = "com.jasper.grpc";

service BlogService {
  rpc GetArticles(GetArticlesRequest) returns (GetArticlesResponse);
}

message GetArticlesRequest {
  int32 page = 1;
  int32 size = 2;
  string keyword = 3;
}

message GetArticlesResponse {
  repeated Article items = 1;
  Extra extra = 2;
};

message Article {
  string id = 1;
  string title = 2;
  string cover_image = 3;
  Category category = 4;
  repeated string tags = 5;
}

message Category {
  int32 id = 1;
  string name = 2;
}

message Extra {
  int32 page = 1;
  int32 size = 2;
  int32 total = 3;
}